--- a/fe-src/pages/auth2/index.css
+++ b/fe-src/pages/auth2/index.css
@@ -1,10 +1,3 @@
-.auth {
-  padding: 44px 20px;
-  height: 80vh;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
 .auth-container {
   display: grid;
   gap: 40px;
@@ -23,18 +16,10 @@
 .auth-form-link{
   text-align: center;
   text-decoration: underline;
-  color: #40AFFF;
+  color: var(--color-link);
   margin-bottom: 20px;
 }
 
 .auth-form-link:hover {
-  color: red;
-}
-
-.message-auth {
-  margin-top: 20px;
-  padding: 2px;
-  border-radius: 4px;
-  font-size: 20px;
-  text-align: center;
+  color: var(--color-link-hover)
 }
