--- a/fe-src/pages/my-data/index.css
+++ b/fe-src/pages/my-data/index.css
@@ -1,13 +1,18 @@
 .data {
   padding: 44px 20px;
-  height: 80vh;
-  max-width: 600px;
-  margin: 0 auto;
+}
+
+@media (min-width: 769px){
+  .data {
+    height: 80vh;
+    width: 600px;
+    margin: 0 auto;
+  }
 }
 
 .data-container {
-  display: grid;
-  gap: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .data-title {
@@ -15,20 +20,6 @@
 }
 
 .data-form {
-  display: grid;
-}
-
-.name-label {
-  margin-bottom: 40px;
-}
-
-.repeat-password-label {
-  margin-bottom: 40px;
-}
-
-.message {
-  padding: 2px;
-  border-radius: 4px;
-  font-size: 20px;
-  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
